# Producto2_DWI

./: README.md
.Net/cliSoap1/: Program.cs
.Net/cliSoap1/Properties/: launchSettings.json
.Net/cliSoap2/: Program.cs
.Net/cliSoap2/Properties/: launchSettings.json
.Net/conIntl/: Program.cs
.Net/conIntl/Properties/: launchSettings.json
C++/CliSoap1/: main.cpp
C++/CliSoap2/: main.cpp
C++/ConIntl/: main.cpp
Golang/cliSoap1/: go.mod  main.go
Golang/cliSoap2/: go.mod  main.go
Golang/conIntl/: go.mod  main.go
Java/CliSoap1/: cliSoap1.java
Java/CliSoap2/: cliSoap2.java
Java/ConIntl/: conIntl.java
Node/CliSoap1/: main.js
Node/CliSoap2/: main.js
Node/ConIntl/: main.js
Perl/clientesoap1/: CliSoap1.pl
Perl/clientesoap2/: CliSoap2.pl
Perl/conintl/: ConIntl.pl
Ruby/clientesoap1/: cliSOAP1.rb
Ruby/clientesoap2/: cliSOAP2.rb
Ruby/conIntl/: ConIntl.rb
Rust/soap_rust/: Cargo.toml
Rust/soap_rust/src/: cliSoap1.rs  cliSoap2.rs  conIntl.rs  main.rs
